Remove commented lines
Signed-off-by: Shelley Lambert <slambert@gmail.com>