@@ -486,7 +486,6 @@ public class JavatestUtil {
 		
 		// testExecutionType of multiJVM_group on Windows and AIX causes memory exhaustion, so limit to non-group multiJVM
 		if (jckVersionInt >= 17 && (spec.contains("win") || spec.contains("aix"))) {
-			// fileContent += "set jck.env.testPlatform.multiJVM \"Yes\";\n";
 			generatedJti.setProperty("jck.env.testPlatform.multiJVM", "Yes"); 
 		}
 
@@ -546,29 +545,20 @@ public class JavatestUtil {
 			}
 			
 			fileContent += "concurrency " + concurrencyString + ";\n";
-			// generatedJti.setProperty("concurrency", concurrencyString);
             if (timeoutFactorString.equals("NULL")) {
 				timeoutFactorString = "4";  // 4 base time limit equal 40 minutes
 			}
 			fileContent += "timeoutfactor " + timeoutFactorString + ";\n";
-			// generatedJti.setProperty("timeoutfactor", timeoutFactorString);
-            
-			// fileContent += keyword + ";\n";
-			generatedJti.setProperty(keyword, "");
+			fileContent += keyword + ";\n";
 
 			if (spec.contains("win")) {
 				// On Windows set the testplatform.os to Windows and set systemRoot, but do not
 				// set the file and path separators (an error is thrown if they are set).
-				//fileContent += "set jck.env.testPlatform.os \"Windows\";\n";
-				//fileContent += "set jck.env.testPlatform.systemRoot " + System.getenv("WINDIR") + ";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "Windows");
 				generatedJti.setProperty("jck.env.testPlatform.systemRoot", System.getenv("WINDIR"));
 			}
 			else {
 				// On other platforms set the testplatform.os to other and set the file and path separators.
-				//fileContent += "set jck.env.testPlatform.os \"other\";\n";
-				//fileContent += "set jck.env.testPlatform.fileSep \"/\";\n";
-				//fileContent += "set jck.env.testPlatform.pathSep \":\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "other");
 				generatedJti.setProperty("jck.env.testPlatform.fileSep", "/");
 				generatedJti.setProperty("jck.env.testPlatform.pathSep", ":");
@@ -576,15 +566,12 @@ public class JavatestUtil {
 
 			if ( testsRequireDisplay(tests) ) {
 				if (spec.contains("zos") || spec.contains("alpine-linux") || spec.contains("riscv")) {
-					//fileContent += "set jck.env.testPlatform.headless Yes" + ";\n";
 					generatedJti.setProperty("jck.env.testPlatform.headless", "Yes");
                     // Ensure JVM graphical device and system are headless, regardless of environment DISPLAY
                     jvmOpts +=  "-Djava.awt.headless=true ";
 				}
 				else {
 					if ( !spec.contains("win") ) {
-						//fileContent += "set jck.env.testPlatform.headless No" + ";\n";
-						//fileContent += "set jck.env.testPlatform.xWindows Yes" + ";\n";
 						generatedJti.setProperty("jck.env.testPlatform.headless", "No");
 						generatedJti.setProperty("jck.env.testPlatform.xWindows", "Yes");
 						if ( !spec.contains("osx") ) { 
@@ -594,7 +581,6 @@ public class JavatestUtil {
 								return false; 
 							}
 							else {
-								//fileContent += "set jck.env.testPlatform.display " + display + ";\n";
 								generatedJti.setProperty("jck.env.testPlatform.display", display);
 							}
 						}
@@ -603,17 +589,13 @@ public class JavatestUtil {
 			}
 
 			if ( !spec.contains("win") && (tests.contains("api/signaturetest") || tests.contains("api/java_io")) ) {
-				//fileContent += "set jck.env.testPlatform.xWindows \"No\"" + ";\n";
 				generatedJti.setProperty("jck.env.testPlatform.xWindows", "No");
 			}
 
-			//fileContent += "set jck.env.runtime.testExecute.cmdAsString \"" + pathToJava + "\"" + ";\n";
 			generatedJti.setProperty("jck.env.runtime.testExecute.cmdAsString", pathToJava);
 
 			if ( tests.equals("api/java_lang") || tests.contains("api/java_lang/instrument") ||
 					tests.contains("api/javax_management") || tests.equals("api") || tests.startsWith("vm") ) {
-				//fileContent += "set jck.env.runtime.testExecute.libPathEnv " + libPath + ";\n";
-				//fileContent += "set jck.env.runtime.testExecute.nativeLibPathValue \"" + nativesLoc + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.runtime.testExecute.libPathEnv", libPath);
 				generatedJti.setProperty("jck.env.runtime.testExecute.nativeLibPathValue", nativesLoc);
 			}
@@ -621,25 +603,19 @@ public class JavatestUtil {
 			// tools.jar was incorporated into modules from Java 9
 			if ( jckVersion.contains("jck8") ) {
 				if ( tests.startsWith("vm/jvmti") || tests.equals("vm") || tests.equals("api") || tests.equals("api/java_lang") || tests.contains("api/java_lang/instrument") ) {
-					//fileContent += "set jck.env.runtime.testExecute.additionalClasspathRemote \"" + pathToToolsJar + "\"" + ";\n";
 					generatedJti.setProperty("jck.env.runtime.testExecute.additionalClasspathRemote", pathToToolsJar);
 				}
 			}
 			
 			if ( tests.startsWith("vm/jvmti") || tests.equals("vm") ) {
-				//fileContent += "set jck.env.runtime.testExecute.jvmtiLivePhase Yes;\n";
 				generatedJti.setProperty("jck.env.runtime.testExecute.jvmtiLivePhase", "Yes");
 			}
 		
 			if ( jckVersionInt < 23 && (tests.contains("api/javax_management") || tests.equals("api")) ) {
-				//fileContent += "set jck.env.runtime.testExecute.jmxResourcePathValue \"" + nativesLoc + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.runtime.testExecute.jmxResourcePathValue", nativesLoc);
 			}
 			
 			if ( tests.contains("api/javax_sound") || tests.equals("api") ) {
-				//fileContent += "set jck.env.runtime.audio.canPlaySound No" + ";\n";
-				//fileContent += "set jck.env.runtime.audio.canPlayMidi No" + ";\n";
-				//fileContent += "set jck.env.runtime.audio.canRecordSound No" + ";\n";
 				generatedJti.setProperty("jck.env.runtime.audio.canPlaySound", "No");
 				generatedJti.setProperty("jck.env.runtime.audio.canPlayMidi", "No");
 				generatedJti.setProperty("jck.env.runtime.audio.canRecordSound", "No");
@@ -651,12 +627,6 @@ public class JavatestUtil {
 					return false; 
 				}
 
-				//fileContent += "set jck.env.runtime.jgss.krb5ClientPassword " + krb5ClientPassword + ";\n";
-				//fileContent += "set jck.env.runtime.jgss.krb5ClientUsername " +  krb5ClientUsername + "/" + KerberosConfig.kdcHostName+'@'+KerberosConfig.kdcRealmName + ";\n";
-				//fileContent += "set jck.env.runtime.jgss.krb5ServerPassword " + krb5ServerPassword + ";\n";
-				//fileContent += "set jck.env.runtime.jgss.krb5ServerUsername " +  krb5ServerUsername + "/" + KerberosConfig.kdcHostName+'@'+KerberosConfig.kdcRealmName + ";\n";
-				//fileContent += "set jck.env.runtime.jgss.kdcHostName " + KerberosConfig.kdcHostName + ";\n";
-				//fileContent += "set jck.env.runtime.jgss.kdcRealmName " + KerberosConfig.kdcRealmName + ";\n";
 				generatedJti.setProperty("jck.env.runtime.jgss.krb5ClientPassword", krb5ClientPassword);
 				generatedJti.setProperty("jck.env.runtime.jgss.krb5ClientUsername", krb5ClientUsername);
 				generatedJti.setProperty("jck.env.runtime.jgss.krb5ServerPassword", krb5ServerPassword );
@@ -667,12 +637,6 @@ public class JavatestUtil {
 				extraJvmOptions += " -Djava.security.krb5.conf=" + krbConfFile + " -DKRB5CCNAME=" + workDir + File.separator + "krb5.cache" + " -DKRB5_KTNAME=" + workDir + File.separator + "krb5.keytab";
 			}	
 			if ( tests.contains("api/java_net") || tests.contains("api/java_nio") || tests.equals("api") ) {
-				//fileContent += "set jck.env.runtime.net.localHostName " + hostname + ";\n";
-				//fileContent += "set jck.env.runtime.net.localHostIPAddr " + ipAddress + ";\n";
-				//fileContent += "set jck.env.runtime.net.testHost1Name " + testHost1Name + ";\n";
-				//fileContent += "set jck.env.runtime.net.testHost1IPAddr " + testHost1Ip + ";\n";
-				//fileContent += "set jck.env.runtime.net.testHost2Name " + testHost2Name + ";\n";
-				//fileContent += "set jck.env.runtime.net.testHost2IPAddr " + testHost2Ip + ";\n";
 				generatedJti.setProperty("jck.env.runtime.net.localHostName", hostname);
 				generatedJti.setProperty("jck.env.runtime.net.localHostIPAddr", ipAddress);
 				generatedJti.setProperty("jck.env.runtime.net.testHost1Name", testHost1Name);
@@ -682,8 +646,6 @@ public class JavatestUtil {
 			}
 			
 			if ( tests.contains("api/java_net") || tests.equals("api") ) {
-				//fileContent += "set jck.env.runtime.url.httpURL " + httpUrl + ";\n";
-				//fileContent += "set jck.env.runtime.url.fileURL " + fileUrl + ";\n";
 				generatedJti.setProperty("jck.env.runtime.url.httpURL", httpUrl);
 				generatedJti.setProperty("jck.env.runtime.url.fileURL", fileUrl);
 			}
@@ -693,8 +655,6 @@ public class JavatestUtil {
 						!tests.contains("api/javax_xml/soap") &&
 						!tests.contains("api/org_omg/PortableInterceptor") &&
 						!tests.contains("api/org_omg/PortableServer") ) {
-					//fileContent += "set jck.env.runtime.remoteAgent.passiveHost localhost" + ";\n";
-					//fileContent += "set jck.env.runtime.remoteAgent.passivePortDefault Yes" + ";\n";
 					generatedJti.setProperty("jck.env.runtime.remoteAgent.passiveHost", "localhost");
 					generatedJti.setProperty("jck.env.runtime.remoteAgent.passivePortDefault", "Yes");
 				}
@@ -716,7 +676,6 @@ public class JavatestUtil {
 			//CORBA related files (e.g. tnameserver) were removed post Java 9
 			if (jckVersion.contains("jck8")) {
 				if ( tests.contains("api/org_omg") || tests.contains("api/javax_management") || tests.equals("api") ) {
-					//fileContent += "set jck.env.runtime.idl.orbHost " + hostname + ";\n";
 					generatedJti.setProperty("jck.env.runtime.idl.orbHost", hostname);
 				}
 			}
@@ -729,24 +688,20 @@ public class JavatestUtil {
 			}
 			if (jckVersion.contains("jck8")) {
 				if (tests.contains("api/signaturetest") || tests.equals("api")) {
-					//fileContent += "set jck.env.runtime.staticsigtest.staticSigTestClasspathRemote \"" + getSignatureTestJars(pathToLib) + "\"" + ";\n";
 					generatedJti.setProperty("jck.env.runtime.staticsigtest.staticSigTestClasspathRemote", getSignatureTestJars(pathToLib));
 				}
 			}
 			if (extraJvmOptions.contains("nofallback") && tests.startsWith("vm") ) {
-				//fileContent += "set jck.env.testPlatform.typecheckerSpecific No" + ";\n";
 				generatedJti.setProperty("jck.env.testPlatform.typecheckerSpecific", "No");	
 			}
 
 			// The jplisLivePhase and Robot available settings are rejected if placed higher up in the .jtb file
 			if ( tests.contains("api/java_awt") || tests.contains("api/javax_swing") || tests.equals("api") ) {
 				if ( robotAvailable == "Yes" ) {
-					//fileContent += "set jck.env.runtime.awt.robotAvailable " + robotAvailable + ";\n";
 					generatedJti.setProperty("jck.env.runtime.awt.robotAvailable", robotAvailable);
 				}
 			}
 			if ( tests.equals("api/java_lang") || tests.contains("api/java_lang/instrument") || tests.equals("api") ) {
-				//fileContent += "set jck.env.runtime.jplis.jplisLivePhase Yes;\n";
 				generatedJti.setProperty("jck.env.runtime.jplis.jplisLivePhase", "Yes");
 			}
 
@@ -763,12 +718,10 @@ public class JavatestUtil {
 			}
 
 			// Add the JVM options supplied by the user plus those added in this method to the jtb file option.
-			//fileContent += "set jck.env.runtime.testExecute.otherOpts \" " + extraJvmOptions + " " + jvmOpts + " \"" + ";\n";
 			generatedJti.setProperty("jck.env.runtime.testExecute.otherOpts", extraJvmOptions + " " + jvmOpts);
 
 			// Tests that need Display on OSX also require AWT_FORCE_HEADFUL=true 
 			if (spec.contains("osx")) {
-				//fileContent += "set jck.env.runtime.testExecute.otherEnvVars \" AWT_FORCE_HEADFUL=true \"" + ";\n";
 				generatedJti.setProperty("jck.env.runtime.testExecute.otherEnvVars", " AWT_FORCE_HEADFUL=true");
 			}
 		}
@@ -783,21 +736,13 @@ public class JavatestUtil {
 			} 
 
 			fileContent += "concurrency " + concurrencyString + ";\n";
-			//generatedJti.setProperty("concurrency", concurrencyString);
 			if (timeoutFactorString.equals("NULL")) {
 				timeoutFactorString = "100";  // lang.CLSS,CONV,STMT,INFR requires more than 1h to complete. lang.Annot,EXPR,LMBD require more than 2h to complete tests
 			}
             fileContent += "timeoutfactor " + timeoutFactorString + ";\n";
-			//generatedJti.setProperty("timeoutfactor", timeoutFactorString);
- 
 			fileContent += keyword + ";\n";
-			generatedJti.setProperty("keyword", "");
 			
 			if (testExecutionType.equals("multijvm")) { 
-				//fileContent += "set jck.env.testPlatform.useAgent \"Yes\";\n";
-				//fileContent += "set jck.env.compiler.agent.agentType \"passive\";\n";
-				//fileContent += "set jck.env.compiler.agent.passiveHost \"" + agentHost + "\"" + ";\n";
-				//fileContent += "set jck.env.compiler.agent.passivePortDefault \"Yes\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.useAgent", "Yes");
 				generatedJti.setProperty("jck.env.compiler.agent.agentType", "passive");
 				generatedJti.setProperty("jck.env.compiler.agent.passiveHost", agentHost);
@@ -808,21 +753,15 @@ public class JavatestUtil {
 			if (spec.contains("win")) {
 				// On Windows set the testplatform.os to Windows and set systemRoot, but do not
 				// set the file and path separators (an error is thrown if they are set).
-				//fileContent += "set jck.env.testPlatform.os \"Windows\";\n";
-				//fileContent += "set jck.env.testPlatform.systemRoot " + System.getenv("WINDIR") + ";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "Windows");
 				generatedJti.setProperty("jck.env.testPlatform.systemRoot", System.getenv("WINDIR"));
 			} else if (!jckVersion.contains("jck8") && (spec.contains("zos") || spec.contains("aix"))) {
 				// On jck11+ z/OS and AIX set the testplatform.os Current system
 				// due to JCK class OsHelper bug with getFileSep() in Compiler JCK Interviewer
-				//fileContent += "set jck.env.testPlatform.os \"Current system\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "Current system");
 				cmdAsStringOrFile = "cmdAsFile";
 			} else {
 				// On other platforms set the testplatform.os to other and set the file and path separators.
-				//fileContent += "set jck.env.testPlatform.os \"other\";\n";
-				//fileContent += "set jck.env.testPlatform.fileSep \"/\";\n";
-				//fileContent += "set jck.env.testPlatform.pathSep \":\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "other");
 				generatedJti.setProperty("jck.env.testPlatform.fileSep", "/");
 				generatedJti.setProperty("jck.env.testPlatform.pathSep", ":");
@@ -830,39 +769,29 @@ public class JavatestUtil {
 			
 			// If the Select Compiler question in the JCK interview was answered as "Java Compiler API (JSR199)",
 			// set jck.env.compiler.testCompile.testCompileAPImultiJVM.cmdAsString.
-			//fileContent += "set jck.env.compiler.testCompile.testCompileAPImultiJVM." + cmdAsStringOrFile + " \"" + testJavaForMultiJVMCompTest + "\"" + ";\n";
 			generatedJti.setProperty("jck.env.compiler.testCompile.testCompileAPImultiJVM." + cmdAsStringOrFile, testJavaForMultiJVMCompTest);
 
 			if (jckVersion.contains("jck8")) {
-				//fileContent += "set jck.env.compiler.testCompile.otherOpts \"-source 1.8 \"" + ";\n";
 				generatedJti.setProperty("jck.env.compiler.testCompile.otherOpts", "-source 1.8 ");
 				if (tests.contains("api/signaturetest") || tests.equals("api")) {
-					//fileContent += "set jck.env.compiler.testCompile.compilerstaticsigtest.compilerStaticSigTestClasspathRemote \"" + getSignatureTestJars(pathToLib) + "\"" + ";\n";
 					generatedJti.setProperty("jck.env.compiler.testCompile.compilerstaticsigtest.compilerStaticSigTestClasspathRemote", getSignatureTestJars(pathToLib));
 				}
 			} else if (jckVersion.contains("jck11")) {
-				//fileContent += "set jck.env.compiler.testCompile.otherOpts \"-source 11 \"" + ";\n";
 				generatedJti.setProperty("jck.env.compiler.testCompile.otherOpts", "-source 11 ");
 			} else { // This is the case where JCK Version > 11
-				//fileContent += "set jck.env.compiler.testCompile.otherOpts \"-source " + jckVersionInt + " --enable-preview\"" + ";\n";
-				// TODO: check if we need to drop the --enable-preview for JDK24+
 				generatedJti.setProperty("jck.env.compiler.testCompile.otherOpts", "-source " + jckVersionInt + " --enable-preview");
 			}
 
 			if (tests.contains("api/java_rmi") || tests.equals("api")) {
-				//fileContent += "set jck.env.compiler.testRmic." + cmdAsStringOrFile + " \"" + pathToRmic + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.compiler.testRmic." + cmdAsStringOrFile, pathToRmic);
 			}
 			
 			System.out.println("RI JDK Used: " + riJavaForMultiJVMCompTest);
-			//fileContent += "set jck.env.compiler.compRefExecute." + cmdAsStringOrFile + " \"" + riJavaForMultiJVMCompTest + "\"" + ";\n";
 			generatedJti.setProperty("jck.env.compiler.compRefExecute." + cmdAsStringOrFile, riJavaForMultiJVMCompTest);
 
 			if (!jckVersion.contains("jck8") && (spec.contains("zos") || spec.contains("aix"))) {
 				// On jck11+ z/OS and AIX set the compRefExecute file and path separators
 				// due to JCK class OsHelper bug with getFileSep() in Compiler JCK Interviewer
-				//fileContent += "set jck.env.compiler.compRefExecute.fileSep \"/\";\n";
-				//fileContent += "set jck.env.compiler.compRefExecute.pathSep \":\";\n";
 				generatedJti.setProperty("jck.env.compiler.compRefExecute.fileSep", "/");
 				generatedJti.setProperty("jck.env.compiler.compRefExecute.pathSep", ":");
 			}
@@ -880,7 +809,6 @@ public class JavatestUtil {
 			
 			// Add the JVM options supplied by the user plus those added in this method to the jtb file option.
 			if (!testExecutionType.equals("multijvm")) { 
-				//fileContent += "set jck.env.compiler.compRefExecute.otherOpts \" " + extraJvmOptions + " " + jvmOpts + " \"" + ";\n";
 				generatedJti.setProperty("jck.env.compiler.compRefExecute.otherOpts", extraJvmOptions + " " + jvmOpts);
 			}
 		}
@@ -946,37 +874,25 @@ public class JavatestUtil {
 			if (spec.contains("win")) {
 				// On Windows set the testplatform.os to Windows and set systemRoot, but do not
 				// set the file and path separators (an error is thrown if they are set).
-				//fileContent += "set jck.env.testPlatform.os \"Windows\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "Windows");
 			} else {
 				// On other platforms set the testplatform.os to other and set the file and path separators.
-				//fileContent += "set jck.env.testPlatform.os \"other\";\n";
-				//fileContent += "set jck.env.testPlatform.fileSep \"/\";\n";
-				//fileContent += "set jck.env.testPlatform.pathSep \":\";\n";
 				generatedJti.setProperty("jck.env.testPlatform.os", "other");
 				generatedJti.setProperty("jck.env.testPlatform.fileSep", "/");
 				generatedJti.setProperty("jck.env.testPlatform.pathSep", ":");
 			}
 
-			//fileContent += "set jck.env.devtools.testExecute.cmdAsString \"" + pathToJava + "\"" + ";\n";
-			//fileContent += "set jck.env.devtools.refExecute.cmdAsFile \"" + pathToJava + "\"" + ";\n";
-			//fileContent += "set jck.env.devtools.scriptEnvVars \"" + "JAVA_HOME=\"" + testJdk + "\" TOOLS_HOME=\"" + testJdk + "\"" + "\"" + ";\n";
 			generatedJti.setProperty("jck.env.devtools.testExecute.cmdAsString", pathToJava);
 			generatedJti.setProperty("jck.env.devtools.refExecute.cmdAsFile", pathToJava);
 			generatedJti.setProperty("jck.env.devtools.scriptEnvVars", "JAVA_HOME=" + testJdk + " TOOLS_HOME=" + testJdk);
 
 			if (tests.contains("java2schema")) {
-				//fileContent += "set jck.env.devtools.jaxb.jxcCmd \"" + jxcCmd + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.devtools.jaxb.jxcCmd", jxcCmd);
 			} else if (tests.contains("jaxws")) {
-				//fileContent += "set jck.env.devtools.jaxws.cmdJavac \"" + pathToJavac + "\"" + ";\n";
-				//fileContent += "set jck.env.devtools.jaxws.genCmd \"" + genCmd + "\"" + ";\n";
-				//fileContent += "set jck.env.devtools.jaxws.impCmd \"" + impCmd + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.devtools.jaxws.cmdJavac", pathToJavac);
 				generatedJti.setProperty("jck.env.devtools.jaxws.genCmd", genCmd);
 				generatedJti.setProperty("jck.env.devtools.jaxws.impCmd", impCmd);
 			} else {
-				//fileContent += "set jck.env.devtools.jaxb.xjcCmd \"" + xjcCmd + "\"" + ";\n";
 				generatedJti.setProperty("jck.env.devtools.jaxb.xjcCmd", xjcCmd);
 			}
 
@@ -985,25 +901,20 @@ public class JavatestUtil {
 			extraJvmOptions += suppressOutOfMemoryDumpOptions;
 
 			// Add the JVM options supplied by the user plus those added in this method to the jtb file option.
-			//fileContent += "set jck.env.devtools.refExecute.otherOpts \" " + extraJvmOptions + " " + jvmOpts + " \"" + ";\n";
 			generatedJti.setProperty("jck.env.devtools.refExecute.otherOpts", extraJvmOptions + " " + jvmOpts);
 		}
 
 		// Only use default initial jtx exclude and disregard the rest of jck exclude lists 
 		// when running a test via jck***_custom.
 		if (testArgs.get(IS_CUSTOM_TARGET) == null) {
-			//fileContent += "set jck.excludeList.customFiles \"" + initialJtxFullPath + " " + defaultJtxFullPath + " " + kflFullPath + " " + customJtx + "\";\n";
 			generatedJti.setProperty("jck.excludeList.customFiles", initialJtxFullPath + " " + defaultJtxFullPath + " " + kflFullPath + " " + customJtx);
 		} else {
-			//fileContent += "set jck.excludeList.customFiles \"" + initialJtxFullPath + " " + defaultJtxFullPath + " " + kflFullPath + "\";\n";
 			generatedJti.setProperty("jck.excludeList.customFiles", initialJtxFullPath + " " + defaultJtxFullPath + " " + kflFullPath);
 		}
 				
 		fileContent += "runTests" + ";\n";
 		fileContent += "writeReport -type xml " + reportDir + ";\n";
-		//generatedJti.setProperty("runTests", "");
-		//generatedJti.setProperty("writeReport -type xml ", reportDir);
-
+		
 		// Make sure any backslashes are escaped, required by the test harness.
 		fileContent = fileContent.replace("\\\\", "\\"); 		// Replaces \\ with \, leave \ alone.
 		fileContent = fileContent.replace("\\", "\\\\");		// Replaces \ with \\
